@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.842 2007-10-05 16:48:26 castaglia Exp $
+$Id: NEWS,v 1.843 2007-10-05 16:55:50 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -15,6 +15,8 @@ CVS
   support for an "EnableDiags" TLSOptions setting, which logs a lot of
   SSL/TLS protocol information to the TLSLog.
 - Bug 2969 - Allow APPE after REST.
+- Bug 2983 - Use getgrouplist(3) for group lookup, if available.  This may
+  potentially speed up the group membership lookup on some systems.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
